<resources>
    <string name="app_name" translatable="false">OpenBook</string>
    <string name="loginButtonText">Login</string>
    <string name="passwordHintText">Password</string>
    <string name="registerButtonText">Register</string>
    <string name="userHintText">User</string>
    <string name="repeatPasswordText">Repeat password</string>
    <string name="logoDescription">Application logo</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="discover_option">Discover</string>
    <string name="books_option">Books</string>
    <string name="profile_option">Profile</string>
    <string name="coverText">cover</string>
    <string name="titleText" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="authorText" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="yearText" translatable="false">2001</string>
...
