...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/author_cl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/author_cv_Item"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
...
                android:scaleType="centerCrop"
                android:src="@drawable/jk_rowling"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/titleText"
...
